# fast-axolotl

./: COMPATIBILITY.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  compatibility-tests.yml  publish.yml
docs/: benchmarks.md  compatibility.md  contributing.md  installation.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/api-reference/: core.md  data-processing.md  streaming.md
documentation/docs/development/: architecture.md  contributing.md
documentation/docs/getting-started/: installation.md  quick-start.md
documentation/docs/performance/: benchmarks.md  best-practices.md
documentation/docs/user-guide/: batch-padding.md  parallel-hashing.md  shimming.md  streaming.md  token-packing.md
scripts/: benchmark.py  compatibility_test.py
src/: lib.rs
src/fast_axolotl/: __init__.py
tests/: test_fast_axolotl.py
