[package]
name = "fast-axolotl"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust extensions for Axolotl dataset streaming"

[lib]
name = "_rust_ext"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python-Rust integration
pyo3 = { version = "0.20.3", features = ["extension-module"] }

# Arrow ecosystem for efficient columnar data processing
# Using version 51.0.0 for compatibility
arrow = { version = "51.0.0", features = ["pyarrow"] }
parquet = "51.0.0"
arrow-schema = "51.0.0"
arrow-arith = "51.0.0"
arrow-array = "51.0.0"
arrow-buffer = "51.0.0"
arrow-data = "51.0.0"
arrow-ipc = "51.0.0"
arrow-json = "51.0.0"
arrow-csv = "51.0.0"

# Force compatible chrono version (must match arrow 51.0.0 requirements)
chrono = "=0.4.38"

# Async runtime
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV processing
csv = "1.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
