[package]
name = "fast-axolotl"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-performance Rust extensions for Axolotl dataset streaming"

[lib]
name = "_rust_ext"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python-Rust integration
pyo3 = { version = "0.20.3", features = ["extension-module"] }

# Arrow ecosystem for efficient columnar data processing
# Using version 51.0.0 for compatibility with PyO3 0.20
arrow = { version = "51.0.0", features = ["pyarrow"] }
parquet = "51.0.0"
arrow-schema = "51.0.0"
arrow-arith = "51.0.0"
arrow-array = "51.0.0"
arrow-buffer = "51.0.0"
arrow-data = "51.0.0"
arrow-ipc = "51.0.0"
arrow-json = "51.0.0"
arrow-csv = "51.0.0"

# Force compatible chrono version (must match arrow 51.0.0 requirements)
chrono = "=0.4.38"

# Async runtime
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV processing
csv = "1.3"

# Hashing for deduplication
sha2 = "0.10"
hex = "0.4"

# Compression support
zstd = "0.13"
flate2 = "1.0"

# Bytes for efficient memory handling
bytes = "1.6"

# Walkdir for directory traversal (HF dataset format)
walkdir = "2.4"

# Regex for pattern matching
regex = "1.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
