[package]
name = "fast-axolotl"
version = "0.2.0"
authors = ["Neul Labs <contact@neullabs.com>"]
edition = "2021"
license = "MIT"
homepage = "https://fast-axolotl.neullabs.com"
documentation = "https://docs.neullabs.com/fast-axolotl"
readme = "README.md"
repository = "https://github.com/neul-labs/fast-axolotl"
description = "Rust extensions for Axolotl fine-tuning — no OOM on large datasets."
keywords = ["axolotl", "streaming", "datasets", "rust", "pyo3"]

[lib]
name = "_rust_ext"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python-Rust integration (0.23+ supports Python 3.13)
pyo3 = { version = "0.23", features = ["extension-module"] }

# Arrow ecosystem for efficient columnar data processing
# Using version 54+ for compatibility with PyO3 0.23
arrow = { version = "54", features = ["pyarrow"] }
parquet = "54"
arrow-schema = "54"
arrow-arith = "54"
arrow-array = "54"
arrow-buffer = "54"
arrow-data = "54"
arrow-ipc = "54"
arrow-json = "54"
arrow-csv = "54"

# Chrono for datetime handling
chrono = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV processing
csv = "1.3"

# Hashing for deduplication
sha2 = "0.10"
hex = "0.4"

# Compression support
zstd = "0.13"
flate2 = "1.0"

# Bytes for efficient memory handling
bytes = "1.6"

# Walkdir for directory traversal (HF dataset format)
walkdir = "2.4"

# Regex for pattern matching
regex = "1.10"

# Error handling with thiserror
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
